# awapi-compare

./: .gitignore  .prettierignore  EULA.md  LICENSE.md  README.md  electron-builder.yml  eslint.config.js  justfile  lint_output.txt  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  typecheck_output.txt  vitest.config.ts
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  contributing.md  diff-options.md  licensing.md  release-process.md  rules-syntax.md  testing.md  user-guide.md
resources/: icon.icns  installer.nsh
samples/: README.md
samples/folderA/: .env.example  .env.example2  README.md  package.json  very very very very long name 123456-43234-432434.md
samples/folderA/config/: app.yaml  database.json
samples/folderA/docs/: CHANGELOG.md  notes.txt
samples/folderB/: .env.example2  README.md  only-in-b.md  package.json
scripts/: generate-notices.ts
src/cli/: package.json
src/desktop/: electron.vite.config.d.ts.map  electron.vite.config.js  electron.vite.config.js.map  electron.vite.config.ts  package.json  tsconfig.json
src/licensing/: package.json  tsconfig.cjs.json  tsconfig.json
src/shared/: package.json
src/shellex/: Cargo.toml
src/shellex/src/: class_factory.rs  context_menu.rs  lib.rs
tests/e2e/: README.md
tests/fixtures/: README.md
todo/: README.md  macos-finder-integration.md  plan.md  session-log-windows-context-menu.md  shell-integration.md
(+148 files in other folders)
